Added footer and updated image css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/styles.css">
+    <link rel="stylesheet" href="/src/styles.css">
     <title>Croissant</title>
   </head>
   <body>
@@ -16,10 +16,10 @@
       rolled into a thin sheet, in a technique called laminating. The process
       results in a layered, flaky texture, similar to a puff pastry.
     </p>
-    <div class="links">
-    <a href="index.html">Homepage</a>
+    <footer>
+    <a href="/">Homepage</a>
     <a href="/photo.html">Photo</a>
     <a href="/contact.html">Contact</a>
-  </div>
+  </footer>
   </body>
 </html>
