--- a/photo.html
+++ b/photo.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/styles.css">
+    <link rel="stylesheet" href="/src/styles.css">
     <title>Croissant Photo</title>
   </head>
   <body>
@@ -12,10 +12,10 @@
       src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/142/935/original/crossiant.jpg?1725998482"
       class="photo-croissant"
     />
-    <div class="links">
-<a href="index.html">Homepage</a>
+    <footer>
+<a href="/">Homepage</a>
  <a href="/photo.html">Photo</a>
     <a href="/contact.html">Contact</a>
-    </div>
+    </footer>
   </body>
 </html>
