--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="src/styles.css">
+  <link rel="stylesheet" href="/src/styles.css">
   <title>Contact</title>
 </head>
 <body>
-  <h1>Contact us</h1>
+  <h1>🥐 Contact us</h1>
   <p>To contact croissant.com, please email us at <a href="mailto:hello@croissant.com" class="email">hello@croissant.com</a>for more info</p>
-<div class="links">
-  <a href="index.html">Homepage</a>
+<footer>
+  <a href="/">Homepage</a>
 <a href="/photo.html">Photo</a>
 <a href="/contact.html">Contact</a>
-</div>
+</footer>
 </body>
 </html>
