Added SEO descriptions and image alt text

--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="A delicious introduction into the history of the croissant">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/styles.css">
-    <title>Croissant</title>
+    <title>The buttery, flaky croissant - Croissant.com</title>
   </head>
   <body>
-    <h1>🥐 The Croissant</h1>
+    <h1>🥐 An introduction to the Croissant</h1>
+    <div class="croissant-history"></div>
+    <p>
+      Across various accounts of croissant history, most sources agree that it originates from Austria as the kipferl. Made from a yeasted wheat dough, the kipferl is a baked bread roll common in Central Europe. Records state that the kipferl has been around as early as the 13th century, but many believe it may be even older. Popular myths attribute its invention as a celebration of the Ottoman Empire’s defeat in the Battle of Vienna; the crescent shape represented the moon on the Ottoman flag.
+    </p>
     <p>
       The croissant is a buttery, flaky, French pastry inspired by the shape of the
       Austrian kipferl, but using the French yeast-leavened laminated dough.
