--- a/photo.html
+++ b/photo.html
@@ -2,15 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Images of the delicious pastry, the croissant">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/styles.css">
-    <title>Croissant Photo</title>
+    <title>Croissant image - croissant.com</title>
   </head>
   <body>
     <h1>The Beautiful Croissant</h1>
     <img
       src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/142/935/original/crossiant.jpg?1725998482"
-      class="photo-croissant"
+      alt="A Breakfast Croissant" class="photo-croissant"
     />
     <footer>
 <a href="/">Homepage</a>
