--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Contact us for more information about croissants">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/src/styles.css">
   <title>Contact</title>
 </head>
 <body>
-  <h1>🥐 Contact us</h1>
+  <h1>🥐 Contact us - croissant.com</h1>
   <p>To contact croissant.com, please email us at <a href="mailto:hello@croissant.com" class="email">hello@croissant.com</a>for more info</p>
 <footer>
   <a href="/">Homepage</a>
