Added SEO titles to links and updated page titles

--- a/contact.html
+++ b/contact.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Contact us for more information about croissants">
+  <meta name="description" content="Contact croissant.com for more information about the croissants">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/src/styles.css">
-  <title>Contact</title>
+  <title>Contact us - croissant.com</title>
 </head>
 <body>
   <h1>🥐 Contact us - croissant.com</h1>
-  <p>To contact croissant.com, please email us at <a href="mailto:hello@croissant.com" class="email">hello@croissant.com</a>for more info</p>
-<footer>
-  <a href="/">Homepage</a>
-<a href="/photo.html">Photo</a>
-<a href="/contact.html">Contact</a>
-</footer>
+  <p>To contact croissant.com, please email us at <a href="mailto:hello@croissant.com" title="contact us by email" class="email">hello@croissant.com</a>for more info</p>
+  <footer>
+    <a href="/" title="Home">Homepage</a>
+    <a href="/photo.html" title="Croissant Photo">Photo</a>
+    <a href="/contact.html" title="Contact Croissant.com">Contact</a>
+  </footer>
 </body>
 </html>
