--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       results in a layered, flaky texture, similar to a puff pastry.
     </p>
     <footer>
-    <a href="/">Homepage</a>
-    <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>
+    <a href="/" title="Home">Homepage</a>
+    <a href="/photo.html" title="Croissant Photo">Photo</a>
+    <a href="/contact.html" title="Contact Croissant.com">Contact</a>
   </footer>
   </body>
 </html>
