--- a/photo.html
+++ b/photo.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Images of the delicious pastry, the croissant">
+    <meta name="description" content="Enjoy a beautiful picture of the delicious pastry, the croissant">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/styles.css">
-    <title>Croissant image - croissant.com</title>
+    <title>Croissant picture - croissant.com</title>
   </head>
   <body>
     <h1>The Beautiful Croissant</h1>
@@ -13,10 +13,10 @@
       src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/142/935/original/crossiant.jpg?1725998482"
       alt="A Breakfast Croissant" class="photo-croissant"
     />
-    <footer>
-<a href="/">Homepage</a>
- <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>
-    </footer>
+  <footer>
+    <a href="/" title="Home">Homepage</a>
+    <a href="/photo.html" title="Croissant Photo">Photo</a>
+    <a href="/contact.html" title="Contact Croissant.com">Contact</a>
+  </footer>
   </body>
 </html>
